dev/test_programs/INVALID/group1/stmt4.go
package main;

func main(){
	var x int;
	x = 2;
	if x > 1;{
		;;
	};
}
